[tool.poetry]
name = "tsp-homework"
version = "0.1.0"
description = ""
authors = ["Crescentm <guyues@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"
matplotlib = "^3.9.0"
black = "^24.4.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
